k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: flask-react-mongo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: <anastasijaangelkoska>/frontend:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: frontend-code
          mountPath: /usr/share/nginx/html
      volumes:
      - name: frontend-code
        hostPath:
          path: ./frontend
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: flask-react-mongo-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
  selector:
    app: frontend
